--- a/Cursach/Properties/Resources.resx
+++ b/Cursach/Properties/Resources.resx
@@ -121,4 +121,7 @@
   <data name="Backgrounds_Blue_background_with_circles_035663_" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Backgrounds_Blue_background_with_circles_035663_.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\logo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
